/***********************************************************************
 X3 ChangeLog

2006-10-18  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: Minor cosmetic error noticed by Raisk. If doing an
	opserv WHOIS from another service (when bound), the channels reply
	would come from o3 instead of that service.

2006-10-18  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: Added in SVSPART alert/traces.

	* src/opserv.help: Added in bits for SVSJOIN, SVSPART, and VERSION.

	* src/proto.h: Added in decleration for svspart.

	* src/proto-p10.c: Extend current SVSPART functionality so that we
	can send them with traces etc.

2006-10-14  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: fix crash Buttaknife noticed if you forget chantarget 
	in svsjoin alerts. Cleanup old silent code fragments left over. Check
	for missing chantarget in alerts also.

2006-10-12  Alex Schumann   <rubin@afternet.org>
	
	* src/opserv.c: Added VERSION alert/trace reaction, so you can now
	setup x3 to version only users matching a criteria, and then another
	alert to do someting based on the version reply. This should be
	usefull for finding bots etc. Or, for example, you can make all xchat
	people join #xchat, or all mirc join #mirc etc.
	Also, there is a fix in here for SVSJOIN which i hadn't gotten
	everything working with.

	* src/proto-p10.c: added privmsg_user and version_user functions

	* src/proto.h: added privmsg_user and version_user function
	declerations

	* src/hash.h: added version_reply variable to users



2006-10-12  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: Added SVSJOIN command, to push a user into a channel,
	and a TRACE REACTION of SVSJOIN for trace and alerts. Now you can do
	something like 'trace SVSJOIN chantarget #dronebots nick bot[*'
	or send all level3 users to a perticular channel on connection, etc.

2006-10-12  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Make lamers not affect users on the userlist above